--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
 <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
 </head>
-<body class="bg-white text-gray-800 dark:bg-gray-900 dark:text-gray-200 transition-colors duration-300">
+<body class="text-gray-800 dark:text-gray-200 transition-colors duration-300">
+
 
   <!-- Navbar -->
   <header class="p-4 flex justify-between items-center shadow-md sticky top-0 bg-white dark:bg-gray-800 z-50">
-    <h1 class="text-xl font-bold">YourName</h1>
+    <h1 class="text-xl font-bold">Mbasa's</h1>
     <nav>
       <ul class="flex gap-4">
         <li><a href="#about" class="hover:text-blue-500">About</a></li>
@@ -28,27 +29,27 @@
 
   <!-- Hero -->
   <section class="min-h-screen flex flex-col justify-center items-center text-center px-4" data-aos="fade-up">
-    <h2 class="text-4xl font-bold mb-4">Hi, I'm YourName</h2>
-    <p class="text-xl mb-6">Frontend Developer & Freelancer</p>
+    <h2 class="text-4xl font-bold mb-4">Hi, I'm Mbasa Cutshwa</h2>
+<p class="text-xl mb-6">Frontend Developer & UI/UX Enthusiast</p>
     <a href="#contact" class="px-6 py-3 bg-blue-600 text-white rounded-md hover:bg-blue-700">Hire Me</a>
   </section>
 
   <!-- About -->
   <section id="about" class="py-20 px-4 max-w-4xl mx-auto" data-aos="slide-left">
     <h3 class="text-3xl font-semibold mb-4">About Me</h3>
-    <p>I’m a frontend developer passionate about clean code and sleek UI.</p>
+    <p>I'm a South African frontend developer with a passion for clean, responsive design. I build modern websites using HTML, Tailwind, and JavaScript — and I love solving real-world problems with code.</p>
   </section>
 
   <!-- Skills -->
   <section id="skills" class="py-20 px-4 bg-gray-100 dark:bg-gray-800" data-aos="zoom-in">
     <h3 class="text-3xl font-semibold mb-6 text-center">Skills</h3>
     <div class="grid grid-cols-2 sm:grid-cols-3 gap-4 text-center">
-      <span>HTML</span>
-      <span>CSS</span>
-      <span>JavaScript</span>
-      <span>Tailwind</span>
-      <span>React</span>
-      <span>Git</span>
+<span>HTML5</span>
+<span>Tailwind CSS</span>
+<span>JavaScript</span>
+<span>Python</span>
+<span>Git & GitHub</span>
+<span>Responsive Design</span>
     </div>
   </section>
 
@@ -57,24 +58,59 @@
     <h3 class="text-3xl font-semibold mb-6 text-center">My Work</h3>
     <div class="grid grid-cols-1 sm:grid-cols-2 gap-6">
       <div class="bg-white dark:bg-gray-700 rounded shadow p-4" data-aos="flip-up">
-        <img src="assets/images/project1.jpg" alt="Project" class="rounded mb-2" />
-        <h4 class="font-bold">Project Title</h4>
-        <p>Brief description of what this project does.</p>
-      </div>
+  <img src="assets/images/focusroulette.png" alt="Focus Roulette App" class="rounded mb-2" />
+  <h4 class="font-bold">Focus Roulette</h4>
+  <p>A productivity web app that helps you stay focused using the Pomodoro technique and random challenges.</p>
+</div>
+<!-- Focus Roulette - Alternate View -->
+<div class="bg-white dark:bg-gray-700 rounded shadow p-4" data-aos="flip-up">
+  <img src="assets/images/focusroulette2.png" alt="Focus Roulette Preview 2" class="rounded mb-2" />
+  <h4 class="font-bold">Focus Roulette (UI View)</h4>
+  <p>Alternate interface showing roulette spinner in action. Fully responsive and styled for dark mode.</p>
+</div>
       <!-- Add more project cards -->
     </div>
   </section>
 
   <!-- Contact -->
-  <section id="contact" class="py-20 px-4 bg-gray-100 dark:bg-gray-800">
-    <h3 class="text-3xl font-semibold mb-6 text-center">Contact Me</h3>
-    <form class="max-w-xl mx-auto space-y-4" data-aos="fade-up">
-      <input type="text" placeholder="Your Name" class="w-full p-3 rounded border text-black" />
-<input type="email" placeholder="Your Email" class="w-full p-3 rounded border text-black" />
-<textarea placeholder="Your Message" rows="5" class="w-full p-3 rounded border text-black"></textarea>
-      <button type="submit" class="px-6 py-3 bg-blue-600 text-white rounded-md hover:bg-blue-700">Send</button>
-    </form>
-  </section>
+<section id="contact" class="py-20 px-4 bg-gray-100 dark:bg-gray-800">
+  <h3 class="text-3xl font-semibold mb-6 text-center">Contact Me</h3>
+  <form
+    action="https://formspree.io/f/mldnpaag"
+    method="POST"
+    class="max-w-xl mx-auto space-y-4"
+    data-aos="fade-up"
+  >
+    <input
+      type="text"
+      name="name"
+      placeholder="Your Name"
+      class="w-full p-3 rounded border text-black"
+      required
+    />
+    <input
+      type="email"
+      name="email"
+      placeholder="Your Email"
+      class="w-full p-3 rounded border text-black"
+      required
+    />
+    <textarea
+      name="message"
+      placeholder="Your Message"
+      rows="5"
+      class="w-full p-3 rounded border text-black"
+      required
+    ></textarea>
+    <button
+      type="submit"
+      class="px-6 py-3 bg-blue-600 text-white rounded-md hover:bg-blue-700"
+    >
+      Send
+    </button>
+  </form>
+</section>
+
 
   <script src="script.js"></script>
 <script>
